--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,3 @@
-
 # Configuration for the Knowledge Graph Builder
 
 # Data Ingestion
@@ -7,7 +6,8 @@ data:
 
 output:
   base_dir: "data/builds"
-  version: "knowledge-consolidation" # or a specific name like "latest", "v1", etc.
+  version: "knowledge-strands-reasoning" # or a specific name like "latest", "v1", etc.
+  serve_only_mode: true
 
 # Graph Construction
 graph:
@@ -21,20 +21,38 @@ graph:
   similarity:
     metric: "cosine"
     threshold: 0.8
-  search_similarity: 0.6 # New parameter for agent context search similarity
+  search_similarity: 0.4 # New parameter for agent context search similarity
   triplet_extraction:
     model: "Babelscape/rebel-large"
 
 # Parent Model
-parent_model:
-  model: "deepseek/deepseek-r1-0528-qwen3-8b:2"
+# parent_model:
+#   model: "deepseek/deepseek-r1-0528-qwen3-8b:2"
 
-agent_model:
-  model: "deepseek/deepseek-r1-0528-qwen3-8b:2"
-  search_sample_ratio: 0.4
+# agent_model:
+#   model: "deepseek/deepseek-r1-0528-qwen3-8b:2"
+#   search_sample_ratio: 0.8
+
+llm_infra:
+  type: 'strands' # 'strands' or 'lm_studio'
+  strands:
+    # parent_agent_model_id: "anthropic.claude-3-sonnet-20240229-v1:0"
+    parent_agent_model_id: "us.deepseek.r1-v1:0"
+    child_agent_model_id: "anthropic.claude-3-sonnet-20240229-v1:0"
+    agent:
+      system_prompt: "You are a helpful assistant that can answer questions based on the context provided. Please be concise and stick to the information given in the context."
+  lm_studio:
+    base_url: "http://localhost:1234/v1"
+    api_key: "not-needed"
+    model: "local-model"
+
 
 # TODO: replace with pinecone
 database:
   uri: "bolt://localhost:7687"
   user: "admin"
   password: "password"
+
+# Debugging settings
+debug:
+  log_llm_responses: false
